# regulated_fuzzy_logic_controller

./: .gitignore  README.md
.github/workflows/: build-and-test.yaml  rolling.yaml
dwb_core/: CMakeLists2.txt
fuzzylite/examples/application/: compile.sh  example-dynamic-11  example-static-11
fuzzylite/examples/sflc/: CMakeLists.txt  CMakeLists_ori.txt  example-dynamic-11  example-static-11
fuzzylite/examples/sflc/src/: main.cpp
fuzzylite/examples/web/: compile.sh  example-dynamic-11  example-static-11
fuzzylite/examples/web/src/: main.cpp
fuzzylite/fuzzylite/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
fuzzylite/fuzzylite/release/: CMakeCache.txt  Makefile  cmake_install.cmake
fuzzylite/test/: catch.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/same_fuzzy_logic_controller/include/dwb_core/: dwb_local_planner.hpp  exceptions.hpp  illegal_trajectory_tracker.hpp  publisher.hpp  trajectory_critic.hpp  trajectory_generator.hpp  trajectory_utils.hpp
install/same_fuzzy_logic_controller/include/same_fuzzy_logic_controller/: same_fuzzy_logic_controller.hpp
install/same_fuzzy_logic_controller/share/ament_index/resource_index/nav2_core__pluginlib__plugin/: same_fuzzy_logic_controller
install/same_fuzzy_logic_controller/share/ament_index/resource_index/package_run_dependencies/: same_fuzzy_logic_controller
install/same_fuzzy_logic_controller/share/ament_index/resource_index/parent_prefix_path/: same_fuzzy_logic_controller
install/same_fuzzy_logic_controller/share/same_fuzzy_logic_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  same_fuzzy_logic_controller_plugin.xml
install/same_fuzzy_logic_controller/share/same_fuzzy_logic_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  same_fuzzy_logic_controllerConfig-version.cmake  same_fuzzy_logic_controllerConfig.cmake
install/same_fuzzy_logic_controller/share/same_fuzzy_logic_controller/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  library_path.dsv  library_path.sh  path.dsv  path.sh
log/: latest_build
nav2_regulated_pure_pursuit_controller2/: CMakeLists.txt  nav2_regulated_pure_pursuit_controller2.xml  package.xml
nav2_same_fuzzy_logic_controller/: CMakeLists.txt  nav2_same_fuzzy_logic_controller.xml  package.xml
nav2_same_fuzzy_logic_controller/include/nav2_regulated_pure_pursuit_controller2/: regulated_pure_pursuit_controller2.hpp
nav2_same_fuzzy_logic_controller/include/nav2_same_fuzzy_logic_controller/: same_fuzzy_logic_controller.hpp
nav2_same_fuzzy_logic_controller/src/: regulated_pure_pursuit_controller2.cpp  same_fuzzy_logic_controller.cpp
regulated_fuzzy_logic_controller/: CMakeLists.txt  README.md  package.xml  regulated_fuzzy_logic_controller_plugin.xml
regulated_fuzzy_logic_controller/include/regulated_fuzzy_logic_controller/: collision_checker.hpp  parameter_handler.hpp  path_handler.hpp  regulated_fuzzy_logic_controller.hpp  regulation_functions.hpp
regulated_fuzzy_logic_controller/params/: nav2_params.yaml
regulated_fuzzy_logic_controller/src/regulated_fuzzy_logic_controller/: collision_checker.cpp  parameter_handler.cpp  path_handler.cpp  regulated_fuzzy_logic_controller.cpp
regulated_fuzzy_logic_controller/src/utils/: line_follower_tester.cpp  seaborn_plot.py
regulated_fuzzy_logic_controller/test/: CMakeLists.txt  test_regulated_fuzzy_logic.cpp
same_fuzzy_logic_controller/: CMakeLists.txt  README.md  package.xml  same_fuzzy_logic_controller_plugin.xml
same_fuzzy_logic_controller/include/fl/: Console.h
same_fuzzy_logic_controller/include/same_fuzzy_logic_controller/: collision_checker.hpp  parameter_handler.hpp  path_handler.hpp  regulation_functions.hpp  same_fuzzy_logic_controller.hpp
same_fuzzy_logic_controller/launch/: rviz_launch.py  tb3_simulation_launch.py
same_fuzzy_logic_controller/params/: nav2_params.yaml
same_fuzzy_logic_controller/src/: collision_checker.cpp  path_handler.cpp  same_fuzzy_logic_controller (copy).cpp  same_fuzzy_logic_controller.cpp
same_fuzzy_logic_controller/src/same_fuzzy_logic_controller/: parameter_handler.cpp  path_handler.cpp  same_fuzzy_logic_controller.cpp
same_fuzzy_logic_controller/src/utils/: distance_calculator_test.py  line_follower_tester.cpp
